# Ace-Translate

./: .gitignore  CLAUDE.md  CMakeLists - 副本.txt  CMakeLists.txt  CMakeLists_cpu.txt  LICENSE  README.md  README_en.md  README_ja.md  build_all.bat  build_cpu.bat  config.conf  i18n.pro  main.py  my_utils.py  requirements.txt  utils.py
DocImgTranslation/: SegmentImage.py  imageEnhancement.py  imageSegmentation1.py  ocr_image_ch2en.py  ocr_image_en2ch.py  structure.py
DocImgTranslation/FastSAM/: Inference.py
DocImgTranslation/FastSAM/utils/: tools.py  tools_gradio.py
FileTranslation/Excel/: excel_translation_ch2en.py  excel_translation_en2ch.py  tmp.html
FileTranslation/Image/: image_translation_ch2en.py  image_translation_en2ch.py
FileTranslation/PDF/: pdf_translation_ch2en.py  pdf_translation_en2ch.py
FileTranslation/PPT/: ppt_translation_ch2en.py  ppt_translation_en2ch.py
FileTranslation/TXT/: txt_translation_ch2en.py  txt_translation_en2ch.py
FileTranslation/Word/: word_translation_ch2en.py  word_translation_en2ch.py
HyperTranslation/: hyper_translation_ch2en.py  hyper_translation_en2ch.py
ScreenshotTranslation/: screenshot_translation_ch2en.py  screenshot_translation_en2ch.py
SpeechTranslation/: speech_translation_ch2en.py  speech_translation_en2ch.py
SubtitleTranslation/: subtitle_translation_ch2en.py  subtitle_translation_en2ch.py  tmp.srt
Translation/: translation_ch2en.py  translation_en2ch.py
docs/: design-refinement.md
docs/superpowers/plans/: 2026-07-15-ui-redesign-plan.md  2026-07-16-ui-polish-plan.md
docs/superpowers/specs/: 2026-07-15-ui-redesign.md
include/docmind/: DocumentEngine.h  DocumentTextEngine.hpp  types.hpp
include/docmind/core/: ConfigManager.hpp  GlobalEngineContext.hpp
include/docmind/engines/: ASREngine.hpp  DLLLoader.hpp  LayoutDetector.hpp  OCREngine.hpp  TranslatorEngine.hpp  VLMEngine.hpp
include/docmind/modules/: FileTranslationModule.hpp  PhotoTranslationModule.hpp  ScreenshotTranslationModule.hpp  TextTranslationModule.hpp
include/docmind/processors/: DocumentProcessor.hpp  PhotoProcessor.hpp
include/docmind/utils/: FontManager.hpp  FormatFixer.hpp  ImageLayout.hpp  ImageRenderer.hpp  ImageUtils.hpp  MarkdownGenerator.hpp  OfficeConverter.h
script/: cli_converter.py
script/office2md/: base.py  core.py  docx.py  latex_dict.py  math.py  omml.py  pptx.py  registry.py  requirements.txt  xlsx.py
src/: DocumentEngine.cpp  DocumentTextEngine.cpp
src/core/: ConfigManager.cpp  GlobalEngineContext.cpp
src/engines/: ASREngine.cpp  DLLLoader.cpp  LayoutDetector.cpp  OCREngine.cpp  TranslatorEngine.cpp  VLMEngine.cpp
src/modules/: FileTranslationModule.cpp  PhotoTranslationModule.cpp  ScreenshotTranslationModule.cpp  TextTranslationModule.cpp
src/processors/: DocumentProcessor.cpp  PhotoProcessor.cpp
src/utils/: FontManager.cpp  FormatFixer.cpp  ImageLayout.cpp  ImageRenderer.cpp  ImageUtils.cpp  MarkdownGenerator.cpp  OfficeConverter.cpp
test/: main.cpp
tools/: build_and_run_ico.bat  fill_ja.py  fill_ts.py  make_rounded_ico.cpp  make_rounded_ico.py  to_tr.py
translations/: en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts
ui/: app_icon.rc  floatwindow.cpp  floatwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  regioncapture.cpp  regioncapture.h  resources.qrc  splashscreen.cpp  splashscreen.h  style.qss  toast.cpp  toast.h  zoomablelabel.cpp  zoomablelabel.h
